Fix cutoff FAQ breadcrumb navbar (#3632)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,6 +193,7 @@ main {
 }
 
 .toolbar {
+  height: 100%;
   &__left {
     margin-top: 0;
   }
